reset z-index of overlay to 0 to fix fragment issues

--- a/assets/nlesc-decorations.scss
+++ b/assets/nlesc-decorations.scss
@@ -55,7 +55,7 @@ $heading4Size: 1.5em;
 	inset: 0;
 	opacity: 0;
 	transition: opacity 1s;
-	z-index: 1;
+	z-index: 0;
 	.opacity-10 { opacity: .1; }
 	.opacity-20 { opacity: .2; }
 	.opacity-30 { opacity: .3; }
